--- a/series.conf
+++ b/series.conf
@@ -34807,6 +34807,7 @@
 	patches.suse/ASoC-nau8821-Cancel-jdet_work-before-handling-jack-e.patch
 	patches.suse/ASoC-nau8821-Generalize-helper-to-clear-IRQ-status.patch
 	patches.suse/ASoC-nau8821-Add-DMI-quirk-to-bypass-jack-debounce-c.patch
+	patches.suse/nvme-multipath-Skip-nr_active-increments-in-RETRY-di.patch
 	patches.suse/HID-hid-input-only-ignore-0-battery-events-for-digit.patch
 	patches.suse/HID-multitouch-fix-name-of-Stylus-input-devices.patch
 	patches.suse/net-usb-rtl8150-Fix-frame-padding.patch
