--- a/series.conf
+++ b/series.conf
@@ -12630,6 +12630,7 @@
 	patches.suse/ixgbevf-fix-mailbox-API-compatibility-by-negotiating.patch
 	patches.suse/ixgbe-handle-IXGBE_VF_FEATURES_NEGOTIATE-mbox-cmd.patch
 	patches.suse/ixgbe-fix-too-early-devlink_free-in-ixgbe_remove.patch
+	patches.suse/nvme-multipath-Skip-nr_active-increments-in-RETRY-di.patch
 	patches.suse/powerpc-fadump-skip-parameter-area-allocation-when-fadump-is-disabled.patch
 
 	# out-of-tree patches
