--- a/series.conf
+++ b/series.conf
@@ -12632,6 +12632,7 @@
 	patches.suse/ixgbe-fix-too-early-devlink_free-in-ixgbe_remove.patch
 	patches.suse/nvme-multipath-Skip-nr_active-increments-in-RETRY-di.patch
 	patches.suse/nvme-auth-update-sc_c-in-host-response.patch
+	patches.suse/nvme-tcp-handle-tls-partially-sent-records-in-write_.patch
 	patches.suse/powerpc-fadump-skip-parameter-area-allocation-when-fadump-is-disabled.patch
 
 	# out-of-tree patches
