--- a/series.conf
+++ b/series.conf
@@ -34771,6 +34771,7 @@
 	patches.suse/mailbox-zynqmp-ipi-Remove-redundant-mbox_controller_.patch
 	patches.suse/mailbox-zynqmp-ipi-Remove-dev.parent-check-in-zynqmp.patch
 	patches.suse/mailbox-zynqmp-ipi-Fix-out-of-bounds-access-in-mailb.patch
+	patches.suse/tcp-Don-t-call-reqsk_fastopen_remove-in-tcp_conn_request.patch
 	patches.suse/net-usb-asix-hold-PM-usage-ref-to-avoid-PM-MDIO-RTNL.patch
 	patches.suse/tpm_tis-Fix-incorrect-arguments-in-tpm_tis_probe_irq.patch
 	patches.suse/crypto-essiv-Check-ssize-for-decryption-and-in-place.patch
