--- a/series.conf
+++ b/series.conf
@@ -6881,6 +6881,7 @@
 	patches.suse/KVM-arm64-Copy-guest-CTR_EL0-into-hyp-VM.patch
 	patches.suse/KVM-arm64-PMU-Set-raw-values-from-user-to-PM-C-I-NTE.patch
 	patches.suse/KVM-arm64-PMU-Fix-SET_ONE_REG-for-vPMC-regs.patch
+	patches.suse/KVM-x86-move-vm_destroy-callback-at-end-of-kvm_arch_.patch
 	patches.suse/KVM-x86-Push-down-setting-vcpu.arch.user_set_tsc.patch
 	patches.suse/KVM-x86-Add-infrastructure-for-secure-TSC.patch
 	patches.suse/KVM-x86-block-KVM_CAP_SYNC_REGS-if-guest-state-is-pr.patch
