--- a/blacklist.conf
+++ b/blacklist.conf
@@ -1216,3 +1216,4 @@ fe24d5bc635e103a517ec201c3cb571eeab8be2f # CVE-2025-38625 https://bugzilla.suse.
 cd4453c5e983cf1fd5757e9acb915adb1e4602b6 # CVE-2025-39914 https://bugzilla.suse.com/show_bug.cgi?id=1250701#c1
 b4a69f7f29c8a459ad6b4d8a8b72450f1d9fd288 # CVE-2025-39707 https://bugzilla.suse.com/show_bug.cgi?id=1249333#c1
 82ccdf062a64f3c4ac575c16179ce68edbbbe8e4 # cleanup designed to break kABI
+5a830bbce3af16833fe0092dec47b6dd30279825 # pure cleanup
