--- a/series.conf
+++ b/series.conf
@@ -12311,6 +12311,7 @@
 	patches.suse/powerpc-ftrace-ensure-ftrace-record-ops-are-always-set-for-NOPs.patch
 	patches.suse/powerpc64-modules-correctly-iterate-over-stubs-in-setup_ftrace_ool_stubs.patch
 	patches.suse/btrfs-return-any-hit-error-from-extent_writepage_io.patch
+	patches.suse/x86-resctrl-Refactor-resctrl_arch_rmid_read.patch
 	patches.suse/bpf-arm64-Call-bpf_jit_binary_pack_finalize-in-bpf_jit_fre.patch
 	patches.suse/driver-core-PM-Set-power.no_callbacks-along-with-pow.patch
 	patches.suse/hwmon-mlxreg-fan-Separate-methods-of-fan-setting-com.patch
