--- a/series.conf
+++ b/series.conf
@@ -436,6 +436,7 @@
 	patches.suse/timers-Move-sleep-and-timeout-functions-into-a-separate-file.patch
 	patches.suse/posix-timers-Cure-si_sys_private-race.patch
 	patches.suse/jiffies-Define-secs_to_jiffies.patch
+	patches.suse/timers-Add-missing-READ_ONCE-in-__run_timer_base.patch
 	patches.suse/timekeeping-Always-check-for-negative-motion.patch
 	patches.suse/hrtimers-Add-missing-hrtimer_init-trace-points.patch
 	patches.suse/KVM-x86-xen-Initialize-hrtimer-in-kvm_xen_init_vcpu.patch
