--- a/series.conf
+++ b/series.conf
@@ -12124,6 +12124,7 @@
 	patches.suse/drm-amd-display-Clear-the-CUR_ENABLE-register-on-DCN.patch
 	patches.suse/drm-amd-amdgpu-Fix-missing-error-return-on-kzalloc-f.patch
 	patches.suse/nvme-fix-PI-insert-on-write.patch
+	patches.suse/md-raid1-fix-data-lost-for-writemostly-rdev.patch
 	patches.suse/platform-x86-asus-wmi-Remove-extra-keys-from-ignore_.patch
 	patches.suse/platform-x86-asus-wmi-Fix-ROG-button-mapping-tablet-.patch
 	patches.suse/platform-x86-amd-pmc-Add-TUXEDO-IB-Pro-Gen10-AMD-to-.patch
