--- a/series.conf
+++ b/series.conf
@@ -12777,6 +12777,9 @@
 	patches.suse/most-usb-Fix-use-after-free-in-hdm_disconnect.patch
 	patches.suse/most-usb-hdm_probe-Fix-calling-put_device-before-dev.patch
 
+	# tip/tip
+	patches.suse/x86-microcode-AMD-Limit-Entrysign-signature-checking-to-kn.patch
+
 	# out-of-tree patches
 	patches.suse/perf-hwmon_pmu-Fix-uninitialized-variable-warning.patch
 
