--- a/series.conf
+++ b/series.conf
@@ -12774,6 +12774,7 @@
 	patches.suse/misc-fastrpc-Fix-dma_buf-object-leak-in-fastrpc_map_.patch
 	patches.suse/most-usb-Fix-use-after-free-in-hdm_disconnect.patch
 	patches.suse/most-usb-hdm_probe-Fix-calling-put_device-before-dev.patch
+	patches.suse/NFSD-Fix-crash-in-nfsd4_read_release.patch
 
 	# out-of-tree patches
 	patches.suse/perf-hwmon_pmu-Fix-uninitialized-variable-warning.patch
