--- a/series.conf
+++ b/series.conf
@@ -11400,6 +11400,7 @@
 	patches.kernel.org/6.12.56-002-nios2-ensure-that-memblock.current_limit-is-s.patch
 	patches.kernel.org/6.12.56-003-hfs-clear-offset-and-space-out-of-valid-recor.patch
 	patches.kernel.org/6.12.56-004-hfs-make-proper-initalization-of-struct-hfs_f.patch
+	patches.kernel.org/6.12.56-005-hfsplus-fix-KMSAN-uninit-value-issue-in-__hfs.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
