--- a/series.conf
+++ b/series.conf
@@ -11508,6 +11508,7 @@
 	patches.kernel.org/6.12.56-110-dt-bindings-usb-dwc3-imx8mp-dma-range-is-requ.patch
 	patches.kernel.org/6.12.56-111-serial-8250_dw-handle-reset-control-deassert-.patch
 	patches.kernel.org/6.12.56-112-serial-8250_exar-add-support-for-Advantech-2-.patch
+	patches.kernel.org/6.12.56-113-serial-8250_mtk-Enable-baud-clock-and-manage-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
