--- a/series.conf
+++ b/series.conf
@@ -11479,6 +11479,7 @@
 	patches.kernel.org/6.12.56-081-RISC-V-Don-t-print-details-of-CPUs-disabled-i.patch
 	patches.kernel.org/6.12.56-082-riscv-hwprobe-avoid-uninitialized-variable-us.patch
 	patches.kernel.org/6.12.56-083-hwmon-sht3x-Fix-error-handling.patch
+	patches.kernel.org/6.12.56-084-nbd-override-creds-to-kernel-when-calling-soc.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
