--- a/series.conf
+++ b/series.conf
@@ -11465,6 +11465,7 @@
 	patches.kernel.org/6.12.56-067-mm-prevent-poison-consumption-when-splitting-.patch
 	patches.kernel.org/6.12.56-068-drm-amd-display-increase-max-link-count-and-f.patch
 	patches.kernel.org/6.12.56-069-spi-spi-nxp-fspi-add-extra-delay-after-dll-lo.patch
+	patches.kernel.org/6.12.56-070-arm64-dts-broadcom-bcm2712-Add-default-GIC-ad.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
