--- a/series.conf
+++ b/series.conf
@@ -11422,6 +11422,7 @@
 	patches.kernel.org/6.12.56-024-PM-EM-Fix-late-boot-with-holes-in-CPU-topolog.patch
 	patches.kernel.org/6.12.56-025-net-mlx5e-Return-1-instead-of-0-in-invalid-ca.patch
 	patches.kernel.org/6.12.56-026-rtnetlink-Allow-deleting-FDB-entries-in-user-.patch
+	patches.kernel.org/6.12.56-027-net-enetc-fix-the-deadlock-of-enetc_mdio_lock.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
