--- a/series.conf
+++ b/series.conf
@@ -12504,6 +12504,7 @@
 	patches.suse/net-usb-Remove-disruptive-netif_wake_queue-in-rtl815.patch
 	patches.suse/net-nfc-nci-Add-parameter-validation-for-packet-data.patch
 	patches.suse/mm-memory-tiering-fix-PGPROMOTE_CANDIDATE-counting.patch
+	patches.suse/tmpfs-preserve-SB_I_VERSION-on-remount.patch
 	patches.suse/drivers-base-node-handle-error-properly-in-register_.patch
 	patches.suse/maple_tree-fix-MAPLE_PARENT_RANGE32-and-parent-point.patch
 	patches.suse/maple_tree-fix-testing-for-32-bit-builds.patch
