--- a/series.conf
+++ b/series.conf
@@ -25078,6 +25078,7 @@
 	patches.suse/bpf-prevent-r10-register-from-being-marked-as-precis.patch
 	patches.suse/selftests-bpf-add-fp-leaking-precise-subprog-result-.patch
 	patches.suse/selftests-bpf-Refactor-out-helper-functions-for-a-fe.patch
+	patches.suse/selftests-bpf-Fix-umount-cgroup2-error-in-test_sockm.patch
 	patches.suse/bpf-make-timer-data-struct-more-generic.patch
 	patches.suse/bpf-replace-bpf_timer_init-with-a-generic-helper.patch
 	patches.suse/bpf-replace-bpf_timer_set_callback-with-a-generic-he.patch
