--- a/series.conf
+++ b/series.conf
@@ -32643,6 +32643,7 @@
 	patches.suse/x86-microcode-Consolidate-the-loader-enablement-checking.patch
 	patches.suse/KVM-SVM-Forcibly-leave-SMM-mode-on-SHUTDOWN-intercep.patch
 	patches.suse/KVM-SVM-Update-dump_ghcb-to-use-the-GHCB-snapshot-fi.patch
+	patches.suse/KVM-x86-mmu-Prevent-installing-hugepages-when-mem-at.patch
 	patches.suse/x86-bpf-call-branch-history-clearing-sequence-on-exit.patch
 	patches.suse/x86-bpf-add-IBHF-call-at-end-of-classic-BPF.patch
 	patches.suse/x86-bhi-do-not-set-BHI_DIS_S-in-32-bit-mode.patch
