--- a/series.conf
+++ b/series.conf
@@ -12730,6 +12730,7 @@
 	patches.suse/can-m_can-m_can_chip_config-bring-up-interface-in-co.patch
 	patches.suse/net-usb-lan78xx-fix-use-of-improperly-initialized-de.patch
 	patches.suse/btrfs-fix-clearing-of-BTRFS_FS_RELOC_RUNNING-if-relo.patch
+	patches.suse/btrfs-fix-memory-leak-on-duplicated-memory-in-the-qg.patch
 	patches.suse/drm-i915-guc-Skip-communication-warning-on-reset-in-.patch
 	patches.suse/drm-amdgpu-fix-handling-of-harvesting-for-ip_discove.patch
 	patches.suse/drm-amdgpu-use-atomic-functions-with-memory-barriers.patch
