--- a/series.conf
+++ b/series.conf
@@ -12760,6 +12760,7 @@
 	patches.suse/HID-multitouch-fix-name-of-Stylus-input-devices.patch
 	patches.suse/x86-resctrl-Fix-miscount-of-bandwidth-event-when-reactivat.patch
 	patches.suse/msft-hv-3361-scsi-storvsc-Prefer-returning-channel-with-the-same-.patch
+	patches.suse/btrfs-directly-free-partially-initialized-fs_info-in.patch
 	patches.suse/cpufreq-amd-pstate-Fix-a-regression-leading-to-EPP-0-after-hibernate.patch
 	patches.suse/net-usb-rtl8150-Fix-frame-padding.patch
 	patches.suse/can-bxcan-bxcan_start_xmit-use-can_dev_dropped_skb-i.patch
