--- a/blacklist.conf
+++ b/blacklist.conf
@@ -581,3 +581,4 @@ f76d4c28a46a9260d85e00dafc8f46d369365d33 # Preparation for blocksize > pagesize 
 82e6381e23f1ea7a14f418215068aaa2ca046c84 # Unit test fix
 757fc66da91b54d4fbc414bee5c440b52560d3b7 # Comment fix
 b7ee30f0efd12f42735ae233071015389407966c # fix requires function and struct field not present: too disruptive to fix
+7d337eef4affc5e26e0570513168c69ddbc40f92 # invasive fix that breaks kabi, not easy to mitigate
