--- a/series.conf
+++ b/series.conf
@@ -34866,6 +34866,7 @@
 	patches.suse/ASoC-fsl_sai-fix-bit-order-for-DSD-format.patch
 	patches.suse/drm-mediatek-Fix-device-use-after-free-on-unbind.patch
 	patches.suse/drm-amd-pm-fix-smu-table-id-bound-check-issue-in-smu.patch
+	patches.suse/drm-amd-pm-powerplay-smumgr-Fix-PCIeBootLinkLevel-va.patch
 
 	########################################################
 	# end of sorted patches
