--- a/series.conf
+++ b/series.conf
@@ -34860,6 +34860,7 @@
 	patches.suse/fbdev-atyfb-Check-if-pll_ops-init_pll-failed.patch
 	patches.suse/ACPI-button-Call-input_free_device-on-failing-input-.patch
 	patches.suse/ACPI-video-Fix-use-after-free-in-acpi_video_switch_b.patch
+	patches.suse/ALSA-usb-audio-fix-control-pipe-direction.patch
 
 	########################################################
 	# end of sorted patches
