--- a/series.conf
+++ b/series.conf
@@ -34863,6 +34863,7 @@
 	patches.suse/ALSA-usb-audio-fix-control-pipe-direction.patch
 	patches.suse/ASoC-qdsp6-q6asm-do-not-sleep-while-atomic.patch
 	patches.suse/ASoC-Intel-avs-Unprepare-a-stream-when-XRUN-occurs.patch
+	patches.suse/ASoC-fsl_sai-fix-bit-order-for-DSD-format.patch
 
 	########################################################
 	# end of sorted patches
