--- a/series.conf
+++ b/series.conf
@@ -34872,6 +34872,7 @@
 	patches.suse/drm-msm-dpu-Fix-pixel-extension-sub-sampling.patch
 	patches.suse/drm-etnaviv-fix-flush-sequence-logic.patch
 	patches.suse/drm-panel-sitronix-st7789v-fix-sync-flags-for-t28cp4.patch
+	patches.suse/drm-panel-kingdisplay-kd097d04-Disable-EoTp.patch
 
 	########################################################
 	# end of sorted patches
