--- a/series.conf
+++ b/series.conf
@@ -11593,6 +11593,7 @@
 	patches.kernel.org/6.12.58-034-bpf-Do-not-audit-capability-check-in-do_jit.patch
 	patches.kernel.org/6.12.58-035-crypto-aspeed-fix-double-free-caused-by-devm.patch
 	patches.kernel.org/6.12.58-036-ASoC-Intel-avs-Unprepare-a-stream-when-XRUN-o.patch
+	patches.kernel.org/6.12.58-037-ASoC-Intel-avs-Disable-periods-elapsed-work-w.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
