--- a/series.conf
+++ b/series.conf
@@ -11882,6 +11882,7 @@
 	patches.kernel.org/6.12.58-323-scsi-ufs-host-mediatek-Correct-system-PM-flow.patch
 	patches.kernel.org/6.12.58-324-scsi-ufs-host-mediatek-Disable-auto-hibern8-d.patch
 	patches.kernel.org/6.12.58-325-ntfs3-pretend-Extend-records-as-regular-files.patch
+	patches.kernel.org/6.12.58-326-wifi-mac80211-Fix-HE-capabilities-element-che.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
