--- a/series.conf
+++ b/series.conf
@@ -11721,6 +11721,7 @@
 	patches.kernel.org/6.12.58-162-tools-power-x86_energy_perf_policy-Prefer-dri.patch
 	patches.kernel.org/6.12.58-163-mfd-stmpe-Remove-IRQ-domain-upon-removal.patch
 	patches.kernel.org/6.12.58-164-mfd-stmpe-i2c-Add-missing-MODULE_LICENSE.patch
+	patches.kernel.org/6.12.58-165-mfd-madera-Work-around-false-positive-Wininit.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
