--- a/series.conf
+++ b/series.conf
@@ -11759,6 +11759,7 @@
 	patches.kernel.org/6.12.58-200-drm-tidss-Set-crtc-modesetting-parameters-wit.patch
 	patches.kernel.org/6.12.58-201-media-i2c-Kconfig-Ensure-a-dependency-on-HAVE.patch
 	patches.kernel.org/6.12.58-202-PCI-ERR-Update-device-error_state-already-aft.patch
+	patches.kernel.org/6.12.58-203-x86-vsyscall-Do-not-require-X86_PF_INSTR-to-e.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
