--- a/series.conf
+++ b/series.conf
@@ -11808,6 +11808,7 @@
 	patches.kernel.org/6.12.58-249-extcon-adc-jack-Fix-wakeup-source-leaks-on-de.patch
 	patches.kernel.org/6.12.58-250-remoteproc-wkup_m3-Use-devm_pm_runtime_enable.patch
 	patches.kernel.org/6.12.58-251-net-phy-fixed_phy-let-fixed_phy_unregister-fr.patch
+	patches.kernel.org/6.12.58-252-fuse-zero-initialize-inode-private-data.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
