--- a/series.conf
+++ b/series.conf
@@ -11645,6 +11645,7 @@
 	patches.kernel.org/6.12.58-086-soc-aspeed-socinfo-Add-AST27xx-silicon-IDs.patch
 	patches.kernel.org/6.12.58-087-firmware-qcom-scm-preserve-assign_mem-error-r.patch
 	patches.kernel.org/6.12.58-088-soc-qcom-smem-Fix-endian-unaware-access-of-nu.patch
+	patches.kernel.org/6.12.58-089-spi-loopback-test-Don-t-use-pK-through-printk.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
