--- a/series.conf
+++ b/series.conf
@@ -11625,6 +11625,7 @@
 	patches.kernel.org/6.12.58-066-drm-sysfb-Do-not-dereference-NULL-pointer-in-.patch
 	patches.kernel.org/6.12.58-067-drm-sched-avoid-killing-parent-entity-on-chil.patch
 	patches.kernel.org/6.12.58-068-drm-nouveau-Fix-race-in-nouveau_sched_fini.patch
+	patches.kernel.org/6.12.58-069-drm-mediatek-Fix-device-use-after-free-on-unb.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
