--- a/series.conf
+++ b/series.conf
@@ -11752,6 +11752,7 @@
 	patches.kernel.org/6.12.58-193-wifi-rtw88-sdio-use-indirect-IO-for-device-re.patch
 	patches.kernel.org/6.12.58-194-drm-amdkfd-return-ENOTTY-for-unsupported-IOCT.patch
 	patches.kernel.org/6.12.58-195-media-pci-ivtv-Don-t-create-fake-v4l2_fh.patch
+	patches.kernel.org/6.12.58-196-media-amphion-Delete-v4l2_fh-synchronously-in.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
