--- a/series.conf
+++ b/series.conf
@@ -12059,6 +12059,7 @@
 	patches.kernel.org/6.12.58-500-drm-mediatek-Disable-AFBC-support-on-Mediatek.patch
 	patches.kernel.org/6.12.58-501-Revert-wifi-ath10k-avoid-unnecessary-wait-for.patch
 	patches.kernel.org/6.12.58-502-ring-buffer-Do-not-warn-in-ring_buffer_map_ge.patch
+	patches.kernel.org/6.12.58-503-net-libwx-fix-device-bus-LAN-ID.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
