--- a/series.conf
+++ b/series.conf
@@ -12039,6 +12039,7 @@
 	patches.kernel.org/6.12.58-480-tools-bitmap-Add-missing-asm-generic-bitsperl.patch
 	patches.kernel.org/6.12.58-481-tools-lib-thermal-don-t-preserve-owner-in-ins.patch
 	patches.kernel.org/6.12.58-482-tools-lib-thermal-use-pkg-config-to-locate-li.patch
+	patches.kernel.org/6.12.58-483-fbdev-Add-bounds-checking-in-bit_putcs-to-fix.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
