--- a/series.conf
+++ b/series.conf
@@ -11975,6 +11975,7 @@
 	patches.kernel.org/6.12.58-416-nfs4_setup_readdir-insufficient-locking-for-d.patch
 	patches.kernel.org/6.12.58-417-net-bridge-Install-FDB-for-bridge-MAC-on-VLAN.patch
 	patches.kernel.org/6.12.58-418-scsi-libfc-Fix-potential-buffer-overflow-in-f.patch
+	patches.kernel.org/6.12.58-419-accel-habanalabs-gaudi2-fix-BMON-disable-conf.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
