--- a/series.conf
+++ b/series.conf
@@ -11601,6 +11601,7 @@
 	patches.kernel.org/6.12.58-042-Bluetooth-ISO-Update-hci_conn_hash_lookup_big.patch
 	patches.kernel.org/6.12.58-043-Bluetooth-ISO-Fix-BIS-connection-dst_type-han.patch
 	patches.kernel.org/6.12.58-044-Bluetooth-btmtksdio-Add-pmctrl-handling-for-B.patch
+	patches.kernel.org/6.12.58-045-Bluetooth-HCI-Fix-tracking-of-advertisement-s.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
