--- a/series.conf
+++ b/series.conf
@@ -11830,6 +11830,7 @@
 	patches.kernel.org/6.12.58-271-inet_diag-annotate-data-races-in-inet_diag_bc.patch
 	patches.kernel.org/6.12.58-272-microchip-lan865x-add-ndo_eth_ioctl-handler-t.patch
 	patches.kernel.org/6.12.58-273-tcp-use-dst_dev_rcu-in-tcp_fastopen_active_di.patch
+	patches.kernel.org/6.12.58-274-crypto-qat-use-kcalloc-in-qat_uclo_map_objs_f.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
