--- a/series.conf
+++ b/series.conf
@@ -11943,6 +11943,7 @@
 	patches.kernel.org/6.12.58-384-ipv6-np-rxpmtu-race-annotation.patch
 	patches.kernel.org/6.12.58-385-RDMA-irdma-Update-Kconfig.patch
 	patches.kernel.org/6.12.58-386-IB-ipoib-Ignore-L3-master-device.patch
+	patches.kernel.org/6.12.58-387-jfs-Verify-inode-mode-when-loading-from-disk.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
