--- a/series.conf
+++ b/series.conf
@@ -11745,6 +11745,7 @@
 	patches.kernel.org/6.12.58-186-ASoC-mediatek-Use-SND_JACK_AVOUT-for-HDMI-DP-.patch
 	patches.kernel.org/6.12.58-187-drm-amd-display-Reset-apply_eamless_boot_opti.patch
 	patches.kernel.org/6.12.58-188-drm-amd-display-Wait-until-OTG-enable-state-i.patch
+	patches.kernel.org/6.12.58-189-PCI-Disable-MSI-on-RDC-PCI-to-PCIe-bridges.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
