--- a/series.conf
+++ b/series.conf
@@ -11737,6 +11737,7 @@
 	patches.kernel.org/6.12.58-178-drm-amd-amdgpu-Release-xcp-drm-memory-after-u.patch
 	patches.kernel.org/6.12.58-179-drm-amdgpu-Skip-poison-aca-bank-from-UE-chann.patch
 	patches.kernel.org/6.12.58-180-drm-amd-display-add-more-cyan-skillfish-devic.patch
+	patches.kernel.org/6.12.58-181-drm-amd-display-update-dpp-disp-clock-from-sm.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
