--- a/series.conf
+++ b/series.conf
@@ -12055,6 +12055,7 @@
 	patches.kernel.org/6.12.58-496-ALSA-hda-realtek-Audio-disappears-on-HP-15-fc.patch
 	patches.kernel.org/6.12.58-497-btrfs-ensure-no-dirty-metadata-is-written-bac.patch
 	patches.kernel.org/6.12.58-498-media-uvcvideo-Use-heuristic-to-find-stream-e.patch
+	patches.kernel.org/6.12.58-499-media-videobuf2-forbid-remove_bufs-when-legac.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
