--- a/series.conf
+++ b/series.conf
@@ -11865,6 +11865,7 @@
 	patches.kernel.org/6.12.58-306-drm-amd-display-Fix-pbn_div-Calculation-Error.patch
 	patches.kernel.org/6.12.58-307-net-dsa-felix-support-phy-mode-10g-qxgmii.patch
 	patches.kernel.org/6.12.58-308-usb-gadget-f_hid-Fix-zero-length-packet-trans.patch
+	patches.kernel.org/6.12.58-309-usb-cdns3-gadget-Use-after-free-during-failed.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
