--- a/series.conf
+++ b/series.conf
@@ -1966,6 +1966,7 @@
 	patches.kernel.org/6.17.8-578-usb-mon-Increase-BUFF_MAX-to-64-MiB-to-support.patch
 	patches.kernel.org/6.17.8-579-usb-xhci-plat-Facilitate-using-autosuspend-for.patch
 	patches.kernel.org/6.17.8-580-f2fs-fix-infinite-loop-in-__insert_extent_tree.patch
+	patches.kernel.org/6.17.8-581-wifi-rtw89-disable-RTW89_PHYSTS_IE09_FTR_0-for.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
