--- a/series.conf
+++ b/series.conf
@@ -1459,6 +1459,7 @@
 	patches.kernel.org/6.17.8-071-drm-etnaviv-fix-flush-sequence-logic.patch
 	patches.kernel.org/6.17.8-072-tools-ynl-fix-string-attribute-length-to-inclu.patch
 	patches.kernel.org/6.17.8-073-net-hns3-return-error-code-when-function-fails.patch
+	patches.kernel.org/6.17.8-074-sfc-fix-potential-memory-leak-in-efx_mae_proce.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
