--- a/series.conf
+++ b/series.conf
@@ -1834,6 +1834,7 @@
 	patches.kernel.org/6.17.8-446-iommu-amd-Add-support-to-remap-unmap-IOMMU-buf.patch
 	patches.kernel.org/6.17.8-447-iommu-amd-Skip-enabling-command-event-buffers-.patch
 	patches.kernel.org/6.17.8-448-iommu-amd-Reuse-device-table-for-kdump.patch
+	patches.kernel.org/6.17.8-449-crypto-ccp-Skip-SEV-and-SNP-INIT-for-kdump-boo.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
