--- a/series.conf
+++ b/series.conf
@@ -2228,6 +2228,7 @@
 	patches.kernel.org/6.17.8-840-drm-amdgpu-Fix-unintended-error-log-in-VCN5_0_.patch
 	patches.kernel.org/6.17.8-841-drm-amd-display-Fix-vupdate_offload_work-doc.patch
 	patches.kernel.org/6.17.8-842-drm-amdgpu-Fix-function-header-names-in-amdgpu.patch
+	patches.kernel.org/6.17.8-843-drm-amdgpu-userq-assign-an-error-code-for-inva.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
