--- a/series.conf
+++ b/series.conf
@@ -1462,6 +1462,7 @@
 	patches.kernel.org/6.17.8-074-sfc-fix-potential-memory-leak-in-efx_mae_proce.patch
 	patches.kernel.org/6.17.8-075-tools-ynl-avoid-print_field-when-there-is-no-r.patch
 	patches.kernel.org/6.17.8-076-dpll-spec-add-missing-module-name-and-clock-id.patch
+	patches.kernel.org/6.17.8-077-ASoC-fsl_sai-Fix-sync-error-in-consumer-mode.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
