--- a/series.conf
+++ b/series.conf
@@ -1893,6 +1893,7 @@
 	patches.kernel.org/6.17.8-505-phy-renesas-r8a779f0-ether-serdes-add-new-step.patch
 	patches.kernel.org/6.17.8-506-phy-rockchip-phy-rockchip-inno-csidphy-allow-w.patch
 	patches.kernel.org/6.17.8-507-drm-msm-registers-Generate-_HI-LO-builders-for.patch
+	patches.kernel.org/6.17.8-508-net-sh_eth-Disable-WoL-if-system-can-not-suspe.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
