--- a/series.conf
+++ b/series.conf
@@ -1552,6 +1552,7 @@
 	patches.kernel.org/6.17.8-164-irqchip-loongson-pch-lpc-Use-legacy-domain-for.patch
 	patches.kernel.org/6.17.8-165-cpufreq-ondemand-Update-the-efficient-idle-che.patch
 	patches.kernel.org/6.17.8-166-arm64-zynqmp-Disable-coresight-by-default.patch
+	patches.kernel.org/6.17.8-167-arm64-zynqmp-Revert-usb-node-drive-strength-an.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
