--- a/series.conf
+++ b/series.conf
@@ -1696,6 +1696,7 @@
 	patches.kernel.org/6.17.8-308-net-ipv6-fix-field-spanning-memcpy-warning-in-.patch
 	patches.kernel.org/6.17.8-309-media-imon-make-send_packet-more-robust.patch
 	patches.kernel.org/6.17.8-310-drm-panthor-Serialize-GPU-cache-flush-operatio.patch
+	patches.kernel.org/6.17.8-311-HID-pidff-Use-direction-fix-only-for-condition.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
