--- a/series.conf
+++ b/series.conf
@@ -1853,6 +1853,7 @@
 	patches.kernel.org/6.17.8-465-serdev-Drop-dev_pm_domain_detach-call.patch
 	patches.kernel.org/6.17.8-466-tty-vt-Add-missing-return-value-for-VT_RESIZE-.patch
 	patches.kernel.org/6.17.8-467-eeprom-at25-support-Cypress-FRAMs-without-devi.patch
+	patches.kernel.org/6.17.8-468-drm-msm-adreno-Add-speedbins-for-A663-GPU.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
