--- a/series.conf
+++ b/series.conf
@@ -1981,6 +1981,7 @@
 	patches.kernel.org/6.17.8-593-ASoC-qcom-sc8280xp-explicitly-set-S16LE-format.patch
 	patches.kernel.org/6.17.8-594-net-phy-clear-link-parameters-on-admin-link-do.patch
 	patches.kernel.org/6.17.8-595-net-ethernet-microchip-sparx5-make-it-selectab.patch
+	patches.kernel.org/6.17.8-596-bus-mhi-core-Improve-mhi_sync_power_up-handlin.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
