--- a/series.conf
+++ b/series.conf
@@ -2209,6 +2209,7 @@
 	patches.kernel.org/6.17.8-821-x86-CPU-AMD-Add-missing-terminator-for-zen5_rd.patch
 	patches.kernel.org/6.17.8-822-drm-define-NVIDIA-DRM-format-modifiers-for-GB2.patch
 	patches.kernel.org/6.17.8-823-drm-nouveau-Advertise-correct-modifiers-on-GB2.patch
+	patches.kernel.org/6.17.8-824-drm-amdgpu-smu-Handle-S0ix-for-vangogh.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
