--- a/series.conf
+++ b/series.conf
@@ -1751,6 +1751,7 @@
 	patches.kernel.org/6.17.8-363-net-phy-fixed_phy-let-fixed_phy_unregister-fre.patch
 	patches.kernel.org/6.17.8-364-selftests-drv-net-hds-restore-hds-settings.patch
 	patches.kernel.org/6.17.8-365-fuse-zero-initialize-inode-private-data.patch
+	patches.kernel.org/6.17.8-366-virtio_fs-fix-the-hash-table-using-in-virtio_f.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
