--- a/series.conf
+++ b/series.conf
@@ -1527,6 +1527,7 @@
 	patches.kernel.org/6.17.8-139-selftests-bpf-Fix-bpf_prog_detach2-usage-in-te.patch
 	patches.kernel.org/6.17.8-140-arm64-versal-net-Update-rtc-calibration-value.patch
 	patches.kernel.org/6.17.8-141-cpufreq-longhaul-handle-NULL-policy-in-longhau.patch
+	patches.kernel.org/6.17.8-142-firmware-qcom-scm-Allow-QSEECOM-on-Dell-Inspir.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
