--- a/series.conf
+++ b/series.conf
@@ -1389,6 +1389,7 @@
 	patches.kernel.org/6.17.8-001-Revert-Bluetooth-L2CAP-convert-timeouts-to-sec.patch
 	patches.kernel.org/6.17.8-002-sched_ext-Mark-scx_bpf_dsq_move_set_-slice-vti.patch
 	patches.kernel.org/6.17.8-003-NFSD-Define-actions-for-the-new-time_deleg-FAT.patch
+	patches.kernel.org/6.17.8-004-NFSD-Fix-crash-in-nfsd4_read_release.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
