--- a/series.conf
+++ b/series.conf
@@ -1967,6 +1967,7 @@
 	patches.kernel.org/6.17.8-579-usb-xhci-plat-Facilitate-using-autosuspend-for.patch
 	patches.kernel.org/6.17.8-580-f2fs-fix-infinite-loop-in-__insert_extent_tree.patch
 	patches.kernel.org/6.17.8-581-wifi-rtw89-disable-RTW89_PHYSTS_IE09_FTR_0-for.patch
+	patches.kernel.org/6.17.8-582-wifi-rtw89-obtain-RX-path-from-ppdu-status-IE0.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
