--- a/series.conf
+++ b/series.conf
@@ -1883,6 +1883,7 @@
 	patches.kernel.org/6.17.8-495-net-phy-marvell-Fix-88e1510-downshift-counter-.patch
 	patches.kernel.org/6.17.8-496-scsi-ufs-host-mediatek-Correct-system-PM-flow.patch
 	patches.kernel.org/6.17.8-497-scsi-ufs-host-mediatek-Disable-auto-hibern8-du.patch
+	patches.kernel.org/6.17.8-498-scsi-ufs-host-mediatek-Fix-adapt-issue-after-P.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
