--- a/series.conf
+++ b/series.conf
@@ -1760,6 +1760,7 @@
 	patches.kernel.org/6.17.8-372-drm-amdkfd-fix-vram-allocation-failure-for-a-s.patch
 	patches.kernel.org/6.17.8-373-drm-amd-display-Support-HW-cursor-180-rot-for-.patch
 	patches.kernel.org/6.17.8-374-drm-amdkfd-Tie-UNMAP_LATENCY-to-queue_preempti.patch
+	patches.kernel.org/6.17.8-375-drm-amd-display-wait-for-otg-update-pending-la.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
