--- a/series.conf
+++ b/series.conf
@@ -1898,6 +1898,7 @@
 	patches.kernel.org/6.17.8-510-media-redrat3-use-int-type-to-store-negative-e.patch
 	patches.kernel.org/6.17.8-511-platform-x86-amd-pmf-Fix-the-custom-bios-input.patch
 	patches.kernel.org/6.17.8-512-selftests-traceroute-Use-require_command.patch
+	patches.kernel.org/6.17.8-513-selftests-traceroute-Return-correct-value-on-f.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
