--- a/series.conf
+++ b/series.conf
@@ -2207,6 +2207,7 @@
 	patches.kernel.org/6.17.8-819-xfs-fix-delalloc-write-failures-in-software-pr.patch
 	patches.kernel.org/6.17.8-820-xfs-fix-various-problems-in-xfs_atomic_write_c.patch
 	patches.kernel.org/6.17.8-821-x86-CPU-AMD-Add-missing-terminator-for-zen5_rd.patch
+	patches.kernel.org/6.17.8-822-drm-define-NVIDIA-DRM-format-modifiers-for-GB2.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
